# django

./: .env.example  .gitignore  Dockerfile  conftest.py  docker-compose.yaml  pyproject.toml  pytest.ini
apps/abstracts/: apps.py
apps/auths/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/auths/migrations/: 0001_initial.py
apps/auths/tests/: __init__.py  conftest.py  test_auth_endpoints.py  test_login.py  test_me.py  test_register.py
apps/listings/: apps.py  models.py  urls.py
apps/listings/filters/: listings.py
apps/listings/management/: __init__.py
apps/listings/management/commands/: __init__.py  seed_fake_data.py
apps/listings/migrations/: 0001_initial.py
apps/listings/serializers/: listings.py  photos.py  properties.py
apps/listings/tests/: __init__.py  conftest.py  test_listing_endpoints.py  test_my_listings.py  test_publish_listing.py
apps/listings/views/: listings.py  photos.py  properties.py
apps/locations/: models.py  urls.py
apps/locations/migrations/: 0001_initial.py
apps/locations/serializers/: categories.py  cities.py  districts.py  microdistricts.py
apps/locations/tests/: __init__.py  conftest.py  test_categories.py  test_cities.py  test_districts.py  test_microdistricts.py
apps/locations/views/: categories.py  cities.py  districts.py  microdistricts.py
settings/: base.py  conf.py  urls.py
settings/env/: prod.py
